--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Rinjani Zoldyck</title>
@@ -42,7 +42,7 @@
 	        	<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	        	<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 	        	<li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>	
-				<li class="nav-item"><a href="Contact.html" class="nav-link">Contack</a></li>
+				<li class="nav-item"><a href="contact.html" class="nav-link">Contack</a></li>
 	        </ul>
 	      </div>
 	    </div>
