--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	        	<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	        	<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>	
-				<li class="nav-item"><a href="Contact.html" class="nav-link">Contack</a></li>
+				<li class="nav-item"><a href="contact.html" class="nav-link">Contack</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -634,7 +634,7 @@
           <div class="col-md-12 text-center">
 			
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Al Zoldyck</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://albayani.github.io/Alzoldyck/">Al Zoldyck</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
