Update 3 days 2 night sembalun.html

--- a/3 days 2 night sembalun.html
+++ b/3 days 2 night sembalun.html
@@ -263,8 +263,8 @@ Incredible view of grand tropical forest and Gili’s
                 <a href="#" class="tag-cloud-link">organization</a>
                 <a href="#" class="tag-cloud-link">Senaru traditional</a>
                 <a href="#" class="tag-cloud-link">Bayan traditional</a>
-                <a href="#" class="tag-cloud-link">Rinjani Zoldyck</a>
-                <a href="#" class="tag-cloud-link">Al Zoldyck</a>
+                <a href="https://albayani.github.io/Rinjani.zoldyck/" class="tag-cloud-link">Rinjani Zoldyck</a>
+                <a href="https://albayani.github.io/Alzoldyck/" class="tag-cloud-link">Al Zoldyck</a>
               </div>
             </div>
 
@@ -341,7 +341,7 @@ Incredible view of grand tropical forest and Gili’s
         <div class="col-md-12 text-center">
           
           <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Al Zoldyck</a>
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://albayani.github.io/Alzoldyck/">Al Zoldyck</a>
     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
         </div>
         </div>
