--- a/contact.html
+++ b/contact.html
@@ -62,9 +62,9 @@
       </div>
     </section>
 <div class="container">
-  <h1><span class="icon icon-share-alt"></span> Rinjani Zoldyck</h1>
+  <h1><span class=""></span> Rinjani Zoldyck</h1>
     <p>every question will be warmly answered immeditely.</p>
-    <h4><span class="icon icon-map-marker"></span> Our Address</h4>
+    <h4><span class="icon icon-map-marker mr-2"></span> Our Address</h4>
     <p>Jl. Pariwisata Senaru, Lombok-Indonesia, 83354</p>
     <h4><span class="icon icon-phone"></span> Phone</h4>
     <p>+6282340212784</p>
