--- a/contact.html
+++ b/contact.html
@@ -62,13 +62,13 @@
       </div>
     </section>
 <div class="container">
-  <h1><span class=""></span> Rinjani Zoldyck</h1>
+  <h1><span class="mr-2"></span> Rinjani Zoldyck</h1>
     <p>every question will be warmly answered immeditely.</p>
     <h4><span class="icon icon-map-marker mr-2"></span> Our Address</h4>
     <p>Jl. Pariwisata Senaru, Lombok-Indonesia, 83354</p>
-    <h4><span class="icon icon-phone"></span> Phone</h4>
+    <h4><span class="icon icon-phone mr-2"></span> Phone</h4>
     <p>+6282340212784</p>
-    <h4><span class="icon icon-envelope"></span> Email</h4>
+    <h4><span class="icon icon-envelope mr-2"></span> Email</h4>
    <p>uchihaalnolimit@gmail.com</p>
   </div>
     <div class="text-center mt-4">
@@ -144,7 +144,7 @@
 					<li><span class="icon icon-map-marker"></span><span class="text">Senaru Village, North Lombok, INA</span></li>
 					<li><a href="https://wa.me/6282340212784"><span class="icon icon-whatsapp"></span><span class="text">+6282340212784</span></a></li>
 					<li><a href="https://wa.me/6282340212784"><span class="icon icon-phone"></span><span class="text">+6282340212784</span></a></li>
-					<li><a href="mailto:uchihaalnolimit@gmail.com"><span class="icon icon-envelope"></span><span class="text">alzoldyck@gmail.com</span></a></li>
+					<li><a href="mailto:uchihaalnolimit@gmail.com"><span class="icon icon-envelope"></span><span class="text">uchihaalnolimit@gmail.com</span></a></li>
 				  </ul>
 				</div>
 			</div>
@@ -154,7 +154,7 @@
           <div class="col-md-12 text-center">
 			
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://albayani/Alzoldyck" target="_blank">Al Zoldyck</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://albayani.github.io/Alzoldyck" target="_blank">Al Zoldyck</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
