--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 					<li><span class="icon icon-map-marker"></span><span class="text">Senaru Village, North Lombok, INA</span></li>
 					<li><a href="https://wa.me/6282340212784"><span class="icon icon-whatsapp"></span><span class="text">+6282340212784</span></a></li>
 					<li><a href="https://wa.me/6282340212784"><span class="icon icon-phone"></span><span class="text">+6282340212784</span></a></li>
-					<li><a href="mailto:uchihaalnolimit@gmail.com"><span class="icon icon-envelope"></span><span class="text">alzoldyck@gmail.com</span></a></li>
+					<li><a href="mailto:uchihaalnolimit@gmail.com"><span class="icon icon-envelope"></span><span class="text">uchihaalnolimit@gmail.com</span></a></li>
 				  </ul>
 				</div>
 			</div>
